Add profile handler
